--- a/views/account_account_view.xml
+++ b/views/account_account_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
- <openerp>
+ <odoo>
     <data>
         <record model="ir.ui.view" id="account_account_inherit">
             <field name="name">account.account.inherit</field>
@@ -15,4 +15,4 @@
             </field>
         </record>
     </data>
-</openerp>
+</odoo>
